@@ -2,9 +2,12 @@ $Id$
 
 2015-12-07  Christian Franke  <franke@computer.org>
 
+	configure.ac: Append 'svn' to list of download tools.
+
 	update-smart-drivedb.in: Use HTTPS download by default.
 	Add options '-t TOOL', '-u LOCATION', '--cacert FILE',
 	'--capath DIR', '--insecure' and '--dryrun'.
+	Add 'svn' as new download tool.
 	Remove usage of 'which' command.
 
 2015-11-23  Christian Franke  <franke@computer.org>
